log/build_2025-11-20_11-36-31/mypkg/stderr.log
  File "/home/kz503/ros2_ws/install/mypkg/lib/python3.10/site-packages/mypkg/talker.py", line 19
    def main()
              ^
SyntaxError: expected ':'

